Corrects accordion padding on mobile

--- a/style.css
+++ b/style.css
@@ -632,7 +632,7 @@ p {
   overflow-wrap: break-word;
   hyphens: auto;
   text-align: justify;
-  padding: 0 1rem;
+  padding: 0 1rem 0.4rem;
 }
 
 .content.last {
@@ -1464,7 +1464,7 @@ p {
 
   .contentMobile ul {
     list-style-type: circle;
-    padding: 0 1rem 0 2rem;
+    padding: 0 1rem 1rem 2rem;
     color: #fff;
   }
 
